--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,6 +43,10 @@
             android:label="@string/title_activity_maps"
             android:theme="@style/AppTheme.NoActionBar"
             />
+        <activity android:name=".ViewTime"
+            android:theme="@style/AppTheme"
+            android:parentActivityName=".MainActivity"/>
+
 
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
