--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Oct 08 22:42:45 CST 2017
-sdk.dir=D\:\\sdk
+#Sun Mar 25 23:46:46 CST 2018
+sdk.dir=/Users/perrytang/Library/Android/sdk
