--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     compile 'com.google.android.gms:play-services-maps:11.8.0'
     implementation 'com.github.chrisbanes:PhotoView:2.1.3'
     testCompile 'junit:junit:4.12'
+    compile 'com.github.baoyachi:StepView:1.9'
 }
 
 
